[gd_scene load_steps=11 format=3 uid="uid://dfabgl4pb85p1"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_aye65"]
[ext_resource type="Texture2D" uid="uid://btc41rhlia5vo" path="res://assets/fightOff.png" id="2_xvy8e"]
[ext_resource type="Texture2D" uid="uid://dk10bn6rcrok2" path="res://assets/Fight.png" id="3_nek0h"]
[ext_resource type="AudioStream" uid="uid://dkjgpausyhgkv" path="res://assets/sounds/genButon.mp3" id="4_7otxd"]
[ext_resource type="AudioStream" uid="uid://b1k5c40mge3mj" path="res://assets/sounds/fight.mp3" id="5_c2r5h"]
[ext_resource type="AudioStream" uid="uid://3yrmlhsxn6fe" path="res://assets/sounds/MenuSong.wav" id="6_n1u4l"]
[ext_resource type="Texture2D" uid="uid://c8rea4qma03aw" path="res://assets/cyf.PNG" id="7_moseu"]
[ext_resource type="Texture2D" uid="uid://c64rlljhl3pig" path="res://assets/mnung.PNG" id="8_13gmy"]
[ext_resource type="Texture2D" uid="uid://ca0tp41pxstn4" path="res://assets/mnug.PNG" id="9_rhtcp"]

[sub_resource type="Theme" id="Theme_1x8y4"]
ItemList/colors/font_color = Color(0.153571, 0.713832, 0.888142, 1)
ItemList/colors/font_selected_color = Color(0.213183, 0.823623, 0.754948, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_aye65")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 649.0
color = Color(0.0962047, 0.0962048, 0.0962047, 1)

[node name="setyourname" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 139.0
offset_bottom = 42.0
text = "Set Your Name
Press Enter lock In !"

[node name="nameSeter" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 12.0
offset_right = 278.0
offset_bottom = 43.0
placeholder_text = "Anon"
caret_blink = true
caret_blink_interval = 0.5

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 417.0
offset_right = 1440.0
offset_bottom = 712.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2_xvy8e")
texture_hover = ExtResource("3_nek0h")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 84.0
offset_right = 745.0
offset_bottom = 636.0
focus_mode = 0
theme = SubResource("Theme_1x8y4")
item_count = 5
item_0/text = "Pigeon"
item_1/text = "Gnome"
item_2/text = "rubish"
item_3/text = "Techno Wizard "
item_4/text = "A Spider"

[node name="BasicButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7otxd")

[node name="FightButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c2r5h")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_n1u4l")
volume_db = -8.0
autoplay = true

[node name="sceneChange" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = -30.0
offset_right = 1579.0
offset_bottom = 288.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_moseu")

[node name="menu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = 430.0
offset_right = 661.0
offset_bottom = 725.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_13gmy")
texture_hover = ExtResource("9_rhtcp")

[connection signal="text_submitted" from="nameSeter" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="ItemList" to="." method="_on_item_list_gui_input"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="timeout" from="sceneChange" to="." method="_on_scene_change_timeout"]
[connection signal="pressed" from="menu" to="." method="_on_texture_button_pressed"]
